--- a/package.json
+++ b/package.json
@@ -5,14 +5,37 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node dist/app.js",
+    "build": "tsc",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-ts": "tsc -w",
+    "watch-node": "nodemon dist/app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gaohan1994/api.rankts.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gaohan1994/api.rankts/issues"
+  },
+  "homepage": "https://github.com/gaohan1994/api.rankts#readme",
   "dependencies": {
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
+    "mongodb": "^3.0.4",
+    "mongoose": "^5.0.9",
     "typescript": "^2.7.2"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.0.44",
+    "@types/koa-bodyparser": "^4.2.0",
+    "@types/koa-router": "^7.0.27",
+    "@types/mongodb": "^3.0.7",
+    "@types/mongoose": "^5.0.7",
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.17.1"
   }
 }
