--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit --coverage --verbose",
     "start": "node dist/app.js",
     "build": "tsc",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run watch-node\"",
@@ -30,12 +30,21 @@
     "typescript": "^2.7.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.2",
     "@types/koa": "^2.0.44",
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.27",
+    "@types/mocha": "^2.2.48",
     "@types/mongodb": "^3.0.7",
     "@types/mongoose": "^5.0.7",
+    "@types/supertest": "^2.0.4",
+    "chai": "^4.1.2",
     "concurrently": "^3.5.1",
-    "nodemon": "^1.17.1"
+    "jest": "^22.4.2",
+    "mocha": "^5.0.4",
+    "nodemon": "^1.17.1",
+    "supertest": "^3.0.0",
+    "ts-jest": "^22.4.1",
+    "ts-node": "^5.0.1"
   }
 }
