--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/gaohan1994/api.rankts#readme",
   "dependencies": {
+    "graphql": "^0.13.1",
+    "graphql-server-koa": "^1.3.2",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
+    "@types/graphql": "^0.10.0",
     "@types/koa": "^2.0.44",
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.27",
