--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
   },
   "homepage": "https://github.com/gaohan1994/api.rankts#readme",
   "dependencies": {
+    "@types/isomorphic-fetch": "^0.0.34",
+    "@types/jssha": "^0.0.29",
+    "crypto": "0.0.3",
+    "es6-promise": "^4.1.1",
     "graphql": "^0.13.1",
     "graphql-server-koa": "^1.3.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jssha": "^2.3.1",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
